完成 src 目录迁移：移除多余的 src/ 目录，符合 Next.js 15 App Router 规范
- 迁移 admin-portal/src/* 到根目录
- 迁移 test-service/src/* 到根目录
- 处理 kline-service 目录冲突，重命名为 generated-alt/ 和 wasm-cal-alt/
- 更新所有 @/src/ 导入路径为 @/
- 验证 TypeScript 类型检查和构建成功
- 修正文档中的路径配置错误

所有迁移的应用现在都符合 Next.js 15 规范，@/ 别名正常工作

--- a/docs/产品需求文档.md
+++ b/docs/产品需求文档.md
@@ -1,21 +1,23 @@
-# Monorepo 微服务平台产品需求文档
+# 产品需求文档 (PRD)
 
-> **文档版本**: v3.0.0  
-> **创建日期**: 2024-01-20  
-> **最后更新**: 2024-12-21  
+> **文档版本**: v4.0.0  
+> **创建日期**: 2025-01-26  
+> **最后更新**: 2025-01-26  
 > **文档状态**: 正式版  
 > **维护团队**: 产品团队
 
 ## 文档摘要
 
-本文档详细描述了基于 **Turborepo** 的 **Monorepo 微服务平台** 的产品需求。该平台旨在构建一个集认证授权、后台管理、业务服务于一体的企业级解决方案，专为需要高内聚、低耦合架构的内网环境设计。
+本文档详细描述了基于 **Turborepo** 的 **OAuth2.1 认证授权中心和微服务平台** 的产品需求。该平台采用现代化技术栈（Next.js 15.3.2 + React 19 + TypeScript 5），构建了一个集认证授权、后台管理、业务服务于一体的企业级解决方案，专为需要高安全性、标准化认证的内网环境设计。
 
 **核心特色**：
 
-- ✅ **无login端点设计**：完全基于OAuth2.1授权码流程
-- ✅ **内网环境优化**：无需邮箱/短信验证，管理员驱动的用户管理
-- ✅ **技术栈先进**：OAuth2.1 + 强制PKCE + Jose库 + Next.js 15
-- ✅ **企业级安全**：符合内网安全要求，支持企业AD/LDAP集成
+- ✅ **标准 OAuth2.1 + OIDC**：完全遵循 OAuth2.1 标准，支持 OpenID Connect
+- ✅ **强制 PKCE 安全**：所有授权流程强制使用 PKCE (S256) 安全机制
+- ✅ **现代化技术栈**：Next.js 15.3.2 + React 19 + TypeScript 5 + Prisma 6.10.1
+- ✅ **企业级 RBAC**：四级权限控制（菜单、API、数据、操作）
+- ✅ **微服务架构**：5个独立微服务 + 3个共享包，高内聚低耦合
+- ✅ **内网环境优化**：专为企业内网设计，无外部依赖
 
 ## 目录
 
