--- a/docs/测试策略文档.md
+++ b/docs/测试策略文档.md
@@ -1,31 +1,38 @@
-# Monorepo 微服务平台测试策略文档
+# OAuth2.1 认证授权中心测试策略文档
 
-**版本**: 4.0
-**创建日期**: 2024-12-22
-**状态**: 正式版
+**版本**: 5.1.0
+**创建日期**: 2025-01-26
+**最后更新**: 2025-01-26
+**状态**: 集成问题测试版
 **维护团队**: 质量保障团队
+
+> ⚠️ **集成状态警告**: 当前项目存在关键集成问题，测试策略已调整以覆盖这些问题的验证和修复。
 
 ## 文档摘要
 
-本文档定义了 Monorepo 微服务平台的统一测试策略，旨在确保各微服务（特别是 `oauth-service`）的质量、稳定性和安全性。本文档为开发和测试团队提供了一套标准的测试流程和质量评估标准，并与 `详细设计文档.md` 保持同步。
+本文档定义了基于 **Turborepo** 的 **OAuth2.1 认证授权中心和微服务平台** 的统一测试策略，旨在确保各微服务（特别是 `oauth-service`）的质量、稳定性和安全性。该平台采用现代化技术栈（Next.js 15.3.2 + React 19 + TypeScript 5），本文档为开发和测试团队提供了一套标准的测试流程和质量评估标准。
 
 **核心原则**：
 
-- ✅ **TDD 优先**: 遵循测试驱动开发（TDD）原则，先写测试，再写实现。
-- ✅ **真实数据测试**: 测试用例必须使用接近生产环境的真实数据，以确保测试的有效性。
-- ✅ **自动化与集成**: 所有测试都应自动化，并集成到 CI/CD 流程中。
-- ✅ **安全测试驱动**: 强调安全测试，确保所有安全机制都经过严格验证。
+- ✅ **TDD 优先**: 遵循测试驱动开发（TDD）原则，先写测试，再写实现
+- ✅ **OAuth2.1 标准测试**: 严格测试 OAuth2.1 + OIDC 标准实现和 PKCE 安全机制
+- ✅ **真实数据测试**: 使用真实 Prisma 数据库和测试数据，确保测试有效性
+- ✅ **安全测试驱动**: 强调 JWT、RBAC、权限控制等安全机制的严格验证
+- ✅ **自动化集成**: 所有测试自动化并集成到 CI/CD 流程中
+- ⚠️ **集成问题优先**: 针对发现的集成问题编写专门的测试用例和修复验证
 
 **技术栈确认**:
 
 ```json
 {
   "测试框架": "Jest + @types/jest",
-  "测试环境": "Node.js + Next.js 15",
-  "数据库": "真实Prisma数据库 (无mock)",
+  "测试环境": "Node.js 22.x + Next.js 15.3.2",
+  "数据库": "真实 Prisma 6.10.1 数据库 (无mock)",
   "JWT库": "jose@6.0.11 (ESM配置修复)",
-  "覆盖率工具": "Jest内置覆盖率",
-  "TDD工具": "Jest + describe/it + beforeEach"
+  "覆盖率工具": "Jest 内置覆盖率",
+  "TDD工具": "Jest + describe/it + beforeEach",
+  "TypeScript": "TypeScript 5.x 严格模式",
+  "React测试": "@testing-library/react + React 19"
 }
 ```
 
@@ -38,8 +45,323 @@
 5. [RBAC权限TDD测试](#5-rbac权限tdd测试)
 6. [API端点单元测试](#6-api端点单元测试)
 7. [集成测试策略](#7-集成测试策略)
-8. [测试环境配置](#8-测试环境配置)
-9. [测试报告与监控](#9-测试报告与监控)
+8. [集成问题测试策略](#8-集成问题测试策略) ⚠️ **新增**
+9. [测试环境配置](#9-测试环境配置)
+10. [测试报告与监控](#10-测试报告与监控)
+
+## 8. 集成问题测试策略 ⚠️ **新增**
+
+### 8.1 高优先级集成问题测试
+
+根据最新的集成状态报告，以下问题需要立即编写测试用例进行验证和修复：
+
+#### 8.1.1 审计日志API缺失测试
+
+**问题描述**: 审计日志后端实现完全缺失，前端调用失败
+
+**测试策略**:
+
+```typescript
+// __tests__/api/audit-logs-missing.test.ts
+describe('审计日志API缺失问题验证', () => {
+  it('应该返回404错误 - 当前状态验证', async () => {
+    const response = await fetch('/api/v2/audit-logs');
+    expect(response.status).toBe(404);
+  });
+
+  it('应该实现审计日志API - 修复后验证', async () => {
+    // 这个测试将在实现后通过
+    const response = await fetch('/api/v2/audit-logs?page=1&pageSize=10');
+    expect(response.status).toBe(200);
+
+    const data = await response.json();
+    expect(data.success).toBe(true);
+    expect(data.data).toHaveProperty('items');
+    expect(data.data).toHaveProperty('pagination');
+  });
+
+  it('应该支持多维度过滤', async () => {
+    const params = new URLSearchParams({
+      page: '1',
+      pageSize: '10',
+      action: 'CREATE',
+      resource: 'USER',
+      userId: 'test-user-001',
+    });
+
+    const response = await fetch(`/api/v2/audit-logs?${params}`);
+    expect(response.status).toBe(200);
+  });
+});
+```
+
+#### 8.1.2 用户资料更新端点缺失测试
+
+**问题描述**: 用户资料更新功能在前端存在但后端未实现
+
+**测试策略**:
+
+```typescript
+// __tests__/api/user-profile-update.test.ts
+describe('用户资料更新端点测试', () => {
+  it('应该支持用户更新自己的资料', async () => {
+    const updateData = {
+      email: 'updated@test.com',
+      displayName: '更新的用户名',
+    };
+
+    const response = await fetch('/api/v2/users/me', {
+      method: 'PUT',
+      headers: {
+        'Content-Type': 'application/json',
+        Authorization: `Bearer ${validAccessToken}`,
+      },
+      body: JSON.stringify(updateData),
+    });
+
+    expect(response.status).toBe(200);
+    const result = await response.json();
+    expect(result.data.email).toBe(updateData.email);
+  });
+
+  it('应该验证邮箱格式', async () => {
+    const invalidData = { email: 'invalid-email' };
+
+    const response = await fetch('/api/v2/users/me', {
+      method: 'PUT',
+      headers: {
+        'Content-Type': 'application/json',
+        Authorization: `Bearer ${validAccessToken}`,
+      },
+      body: JSON.stringify(invalidData),
+    });
+
+    expect(response.status).toBe(400);
+  });
+});
+```
+
+#### 8.1.3 客户端密钥轮换路径不匹配测试
+
+**问题描述**: 前端调用 `rotate-secret`，后端实现 `secret`
+
+**测试策略**:
+
+```typescript
+// __tests__/api/client-secret-rotation.test.ts
+describe('客户端密钥轮换路径测试', () => {
+  it('应该修复路径不匹配问题', async () => {
+    const clientId = 'test-client-001';
+
+    // 测试统一后的路径
+    const response = await fetch(`/api/v2/clients/${clientId}/secret`, {
+      method: 'POST',
+      headers: {
+        Authorization: `Bearer ${adminAccessToken}`,
+      },
+    });
+
+    expect(response.status).toBe(200);
+    const result = await response.json();
+    expect(result.data).toHaveProperty('clientSecret');
+    expect(result.data.clientSecret).toMatch(/^[A-Za-z0-9_-]{32,}$/);
+  });
+
+  it('应该记录密钥轮换审计日志', async () => {
+    const clientId = 'test-client-001';
+
+    await fetch(`/api/v2/clients/${clientId}/secret`, {
+      method: 'POST',
+      headers: { Authorization: `Bearer ${adminAccessToken}` },
+    });
+
+    // 验证审计日志记录
+    const auditResponse = await fetch('/api/v2/audit-logs?action=ROTATE_SECRET');
+    const auditData = await auditResponse.json();
+    expect(auditData.data.items.length).toBeGreaterThan(0);
+  });
+});
+```
+
+#### 8.1.4 会话注销未集成令牌撤销测试
+
+**问题描述**: 前端注销未调用 OAuth2.1 标准的令牌撤销端点
+
+**测试策略**:
+
+```typescript
+// __tests__/integration/logout-token-revocation.test.ts
+describe('会话注销集成令牌撤销测试', () => {
+  it('应该在注销时撤销访问令牌', async () => {
+    // 模拟用户注销
+    const logoutResponse = await fetch('/api/v2/auth/logout', {
+      method: 'POST',
+      headers: {
+        Authorization: `Bearer ${validAccessToken}`,
+      },
+    });
+
+    expect(logoutResponse.status).toBe(200);
+
+    // 验证令牌已被撤销
+    const tokenCheckResponse = await fetch('/api/v2/oauth/userinfo', {
+      headers: {
+        Authorization: `Bearer ${validAccessToken}`,
+      },
+    });
+
+    expect(tokenCheckResponse.status).toBe(401);
+  });
+
+  it('应该在注销时撤销刷新令牌', async () => {
+    const refreshToken = 'valid-refresh-token';
+
+    await fetch('/api/v2/auth/logout', {
+      method: 'POST',
+      headers: { Authorization: `Bearer ${validAccessToken}` },
+    });
+
+    // 尝试使用刷新令牌
+    const refreshResponse = await fetch('/api/v2/oauth/token', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+      body: new URLSearchParams({
+        grant_type: 'refresh_token',
+        refresh_token: refreshToken,
+      }),
+    });
+
+    expect(refreshResponse.status).toBe(400);
+  });
+});
+```
+
+### 8.2 中优先级集成问题测试
+
+#### 8.2.1 功能重复端点统一测试
+
+**问题描述**: 存在功能相似的端点需要统一
+
+**测试策略**:
+
+```typescript
+// __tests__/api/endpoint-unification.test.ts
+describe('重复端点统一测试', () => {
+  it('应该统一会话结束为OAuth标准', async () => {
+    // 测试 /api/v2/oauth/revoke 替代 /api/v2/auth/logout
+    const revokeResponse = await fetch('/api/v2/oauth/revoke', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+      body: new URLSearchParams({
+        token: validAccessToken,
+        token_type_hint: 'access_token',
+      }),
+    });
+
+    expect(revokeResponse.status).toBe(200);
+  });
+
+  it('应该保留不同用途的用户信息端点', async () => {
+    // /api/v2/users/me - 管理界面用
+    const userMeResponse = await fetch('/api/v2/users/me', {
+      headers: { Authorization: `Bearer ${validAccessToken}` },
+    });
+    expect(userMeResponse.status).toBe(200);
+
+    // /api/v2/oauth/userinfo - OIDC标准
+    const userinfoResponse = await fetch('/api/v2/oauth/userinfo', {
+      headers: { Authorization: `Bearer ${validAccessToken}` },
+    });
+    expect(userinfoResponse.status).toBe(200);
+
+    // 验证返回数据格式不同
+    const userData = await userMeResponse.json();
+    const oidcData = await userinfoResponse.json();
+    expect(userData.data).toHaveProperty('roles');
+    expect(oidcData).toHaveProperty('sub');
+  });
+});
+```
+
+#### 8.2.2 API路径一致性测试
+
+**测试策略**:
+
+```typescript
+// __tests__/api/path-consistency.test.ts
+describe('API路径一致性测试', () => {
+  it('应该统一审计日志路径为 /api/v2/audit-logs', async () => {
+    const response = await fetch('/api/v2/audit-logs');
+    expect(response.status).not.toBe(404);
+  });
+
+  it('应该统一客户端密钥路径为 /secret', async () => {
+    const clientId = 'test-client';
+    const response = await fetch(`/api/v2/clients/${clientId}/secret`, {
+      method: 'POST',
+      headers: { Authorization: `Bearer ${adminAccessToken}` },
+    });
+    expect(response.status).not.toBe(404);
+  });
+});
+```
+
+### 8.3 集成问题修复验证流程
+
+#### 8.3.1 修复前测试（Red阶段）
+
+1. **运行失败测试**: 验证问题确实存在
+2. **记录错误状态**: 确保测试能够检测到问题
+3. **建立基线**: 为修复后的对比建立基础
+
+#### 8.3.2 修复实施（Green阶段）
+
+1. **最小化修复**: 只修复使测试通过的最小代码
+2. **保持向后兼容**: 确保现有功能不受影响
+3. **增量验证**: 每个修复后立即运行相关测试
+
+#### 8.3.3 重构优化（Refactor阶段）
+
+1. **代码优化**: 在保持测试通过的前提下优化代码
+2. **性能提升**: 优化API响应时间和数据库查询
+3. **文档更新**: 同步更新API文档和集成指南
+
+### 8.4 集成问题回归测试
+
+```typescript
+// __tests__/regression/integration-issues.test.ts
+describe('集成问题回归测试套件', () => {
+  describe('审计日志功能', () => {
+    it('应该完整实现审计日志API', async () => {
+      // 完整的审计日志功能测试
+    });
+  });
+
+  describe('用户资料管理', () => {
+    it('应该支持用户资料更新', async () => {
+      // 用户资料更新测试
+    });
+  });
+
+  describe('客户端管理', () => {
+    it('应该统一密钥轮换路径', async () => {
+      // 密钥轮换路径测试
+    });
+  });
+
+  describe('会话管理', () => {
+    it('应该集成令牌撤销到注销流程', async () => {
+      // 注销集成测试
+    });
+  });
+
+  describe('端点一致性', () => {
+    it('应该保持API路径一致性', async () => {
+      // 路径一致性测试
+    });
+  });
+});
+```
 
 ## 1. TDD测试策略
 
@@ -69,10 +391,25 @@ OAuth2.1 + RBAC测试金字塔
 
 ### 1.3 测试覆盖率目标
 
-| 测试类型 | 覆盖率目标 | 关键指标                           |
-| -------- | ---------- | ---------------------------------- |
-| 单元测试 | ≥ 85%      | OAuth2.1端点覆盖率、RBAC逻辑覆盖率 |
-| 集成测试 | ≥ 90%      | 完整授权码流程覆盖率               |
+| 测试类型     | 覆盖率目标 | 关键指标                           |
+| ------------ | ---------- | ---------------------------------- |
+| 单元测试     | ≥ 85%      | OAuth2.1端点覆盖率、RBAC逻辑覆盖率 |
+| 集成测试     | ≥ 90%      | 完整授权码流程覆盖率               |
+| 集成问题测试 | 100%       | 发现问题的回归测试覆盖率           |
+
+### 1.4 当前集成状态
+
+- **核心功能**: ✅ 已完成并通过测试
+- **集成问题**: ⚠️ 存在关键问题需要测试验证
+- **整体完成度**: 75% (核心功能完成，集成问题待解决)
+
+**发现的关键问题**:
+
+1. 审计日志API后端实现缺失
+2. 用户资料更新端点缺失
+3. 客户端密钥轮换路径不匹配
+4. 会话注销未集成令牌撤销
+5. 功能重复端点需要统一
 
 ### 1.4 测试驱动原则
 
