--- a/docs/详细设计文档.md
+++ b/docs/详细设计文档.md
@@ -1,48 +1,90 @@
-# Monorepo 微服务平台详细设计文档
+# OAuth2.1 认证授权中心 & 微服务平台详细设计文档
 
-**版本**: 4.0
-**创建日期**: 2024-12-22
+**版本**: v5.1.0
+**创建日期**: 2025-01-26
+**更新日期**: 2025-01-26
 **状态**: 正式版
 **维护团队**: 架构团队
+**实现状态**: ⚠️ 核心功能完成，存在集成问题
 
 ## 文档摘要
 
-本文档是 Monorepo 微服务平台的统一详细设计文档，整合了系统架构、API 设计、权限体系和安全机制。本文档旨在为开发、测试和运维团队提供一份全面、准确的技术参考。
+本文档是基于 Turborepo 的 OAuth2.1 认证授权中心和微服务平台的统一详细设计文档，整合了系统架构、API 设计、权限体系和安全机制。采用 Next.js 15 + TypeScript 5 技术栈，实现了完整的 OAuth2.1 + OIDC 认证授权体系和企业级 RBAC 权限管理系统。
+
+**⚠️ 当前状态**: 核心OAuth2.1功能已实现，但存在API端点集成问题需要解决。
 
 **核心特色**：
 
-- ✅ **中心化认证**: `oauth-service` 为所有微服务提供统一的认证和授权。
-- ✅ **OAuth2.1 & OIDC**: 完整支持 OAuth2.1 授权码模式（含PKCE）和 OpenID Connect。
-- ✅ **企业级 RBAC**: 采用灵活的 RBAC 模型，支持菜单、API、数据和操作四级权限控制。
-- ✅ **JWT 安全**: 使用 Jose 库生成和验证 JWT，确保通信安全。
-- ✅ **无直接登录API**: 系统内不存在任何独立的 login 端点，所有认证必须通过标准 OAuth2.1 流程。
+- ✅ **OAuth2.1 认证中心**: 完整实现 OAuth2.1 + OIDC 标准，支持授权码流程 + PKCE
+- ✅ **企业级 RBAC**: 四级权限控制（菜单、API、数据、操作），灵活的角色权限体系
+- ✅ **微服务架构**: 5个独立微服务 + 3个共享包，统一认证授权
+- ✅ **现代技术栈**: Next.js 15.3.2 + React 19 + TypeScript 5 + Prisma 6.10.1
+- ✅ **JWT 安全**: jose 6.0.11 + RS256 算法，支持密钥轮换和令牌撤销
+- ✅ **标准化流程**: 无直接登录 API，所有认证必须通过标准 OAuth2.1 流程
+- ⚠️ **管理后台**: 基础功能完成，存在集成问题
+- ❌ **审计日志**: 后端实现缺失
 
 ## 1. 系统架构
 
-### 1.1 技术栈
+### 1.1 技术栈详情
 
-#### 前端技术栈
+#### 🎯 核心技术栈
 
-- **框架**: Next.js ^15.3.2 (App Router)
-- **语言**: TypeScript ^5
-- **样式**: Tailwind CSS ^4.0.0
-- **UI组件**: Shadcn/ui (基于 Radix UI)
-  - `@radix-ui/react-*`: ^1.1.x
-  - `lucide-react`: ^0.513.0
-- **状态管理**: Zustand (根据需要添加)
-- **表单处理**: React Hook Form (根据需要添加) + Zod ^3.24.2
-- **HTTP客户端**: Fetch API (原生)
+- **Monorepo**: Turborepo 2.3.3 (构建系统)
+- **运行时**: Node.js 22.x LTS
+- **包管理**: pnpm 9.x (工作区支持)
+- **语言**: TypeScript 5.x (严格模式)
 
-#### 后端技术栈
+#### 🎨 前端技术栈
 
-- **运行时**: Node.js ^22
-- **框架**: Next.js ^15.3.2 API Routes
-- **语言**: TypeScript ^5
-- **数据库**: SQLite (通过 Prisma)
-- **ORM**: Prisma ^6.10.1
-- **认证**: JWT (jose ^6.0.11) + OAuth 2.1
-- **加密**: bcrypt ^6.0.0
-- **验证**: Zod ^3.24.2
+- **框架**: Next.js 15.3.2 (App Router + React 19)
+- **UI框架**:
+  - shadcn/ui (组件库)
+  - Tailwind CSS 4.1.5 (样式系统)
+  - Radix UI (无障碍组件基础)
+- **状态管理**:
+  - Zustand + Immer (全局状态)
+  - @tanstack/react-query (服务端状态)
+- **表单处理**:
+  - React Hook Form 7.x
+  - Zod 3.24.1 (验证模式)
+- **图标**: Lucide React 0.513.0
+- **工具库**:
+  - date-fns (日期处理)
+  - class-variance-authority (样式变体)
+  - tailwind-merge (样式合并)
+
+#### ⚙️ 后端技术栈
+
+- **API框架**: Next.js 15.3.2 API Routes
+- **数据库**:
+  - SQLite (开发环境)
+  - PostgreSQL (生产环境)
+- **ORM**: Prisma 6.10.1
+  - Prisma Client (类型安全查询)
+  - Prisma Migrate (数据库迁移)
+  - Prisma Studio (数据库管理)
+- **认证授权**:
+  - OAuth2.1 + OIDC 标准实现
+  - jose 6.0.11 (JWT 处理)
+  - bcrypt 6.0.0 (密码加密)
+- **验证**: Zod 3.24.1 (API 数据验证)
+- **日志**: winston (结构化日志)
+
+#### 🛠️ 开发工具栈
+
+- **代码质量**:
+  - ESLint 9.x (代码检查)
+  - Prettier 3.x (代码格式化)
+  - TypeScript 5.x (类型检查)
+- **测试**:
+  - Jest 29.x (单元测试)
+  - @testing-library/react (组件测试)
+  - Playwright (E2E 测试)
+- **构建**:
+  - Turborepo (Monorepo 构建)
+  - SWC (快速编译)
+  - PostCSS (CSS 处理)
 
 ### 1.2 数据库设计
 
@@ -218,25 +260,64 @@ sequenceDiagram
 
 #### OAuth2.1 & OIDC 端点
 
-| 端点路径                            | HTTP方法 | 功能描述              |
-| ----------------------------------- | -------- | --------------------- |
-| `/api/v2/oauth/authorize`           | GET      | 启动OAuth2.1授权流程  |
-| `/api/v2/oauth/token`               | POST     | 交换授权码获取JWT令牌 |
-| `/api/v2/oauth/userinfo`            | GET      | OIDC用户信息端点      |
-| `/api/v2/oauth/revoke`              | POST     | 撤销访问令牌          |
-| `/.well-known/jwks.json`            | GET      | JWT验证公钥           |
-| `/.well-known/openid-configuration` | GET      | OIDC发现信息          |
+| 端点路径                            | HTTP方法 | 功能描述              | 状态 | 集成状态           |
+| ----------------------------------- | -------- | --------------------- | ---- | ------------------ |
+| `/api/v2/oauth/authorize`           | GET      | 启动OAuth2.1授权流程  | ✅   | ✅ 正常使用        |
+| `/api/v2/oauth/token`               | POST     | 交换授权码获取JWT令牌 | ✅   | ✅ 正常使用        |
+| `/api/v2/oauth/userinfo`            | GET      | OIDC用户信息端点      | ✅   | ⚠️ 与/users/me重复 |
+| `/api/v2/oauth/revoke`              | POST     | 撤销访问令牌          | ✅   | ⚠️ 前端未集成      |
+| `/.well-known/jwks.json`            | GET      | JWT验证公钥           | ✅   | ✅ 正常使用        |
+| `/.well-known/openid-configuration` | GET      | OIDC发现信息          | ✅   | ⚠️ 前端未使用      |
 
 #### 管理端 API
 
-| 资源       | API 路径                        | 支持方法               |
-| ---------- | ------------------------------- | ---------------------- |
-| 用户管理   | `/api/v2/users`                 | GET, POST, PUT, DELETE |
-| 角色管理   | `/api/v2/roles`                 | GET, POST, PUT, DELETE |
-| 权限管理   | `/api/v2/permissions`           | GET, POST, PUT, DELETE |
-| 客户端管理 | `/api/v2/clients`               | GET, POST, PUT, DELETE |
-| 审计日志   | `/api/v2/audit/logs`            | GET                    |
-| 系统配置   | `/api/v2/system/configurations` | GET, PUT               |
+##### 用户管理
+
+| 端点                       | 方法   | 描述     | 后端状态 | 前端集成 | 问题                  |
+| -------------------------- | ------ | -------- | -------- | -------- | --------------------- |
+| `/api/v2/users`            | GET    | 用户列表 | ✅       | ✅       | -                     |
+| `/api/v2/users`            | POST   | 创建用户 | ✅       | ✅       | -                     |
+| `/api/v2/users/{id}`       | GET    | 用户详情 | ✅       | ✅       | -                     |
+| `/api/v2/users/{id}`       | PUT    | 更新用户 | ✅       | ✅       | -                     |
+| `/api/v2/users/{id}`       | DELETE | 删除用户 | ✅       | ✅       | -                     |
+| `/api/v2/users/me`         | GET    | 当前用户 | ✅       | ✅       | 与/oauth/userinfo重复 |
+| `/api/v2/users/me/profile` | PUT    | 更新资料 | ❌       | ✅       | **后端未实现**        |
+
+##### 角色管理
+
+| 端点                 | 方法   | 描述     | 后端状态 | 前端集成 | 问题 |
+| -------------------- | ------ | -------- | -------- | -------- | ---- |
+| `/api/v2/roles`      | GET    | 角色列表 | ✅       | ✅       | -    |
+| `/api/v2/roles`      | POST   | 创建角色 | ✅       | ✅       | -    |
+| `/api/v2/roles/{id}` | GET    | 角色详情 | ✅       | ✅       | -    |
+| `/api/v2/roles/{id}` | PUT    | 更新角色 | ✅       | ✅       | -    |
+| `/api/v2/roles/{id}` | DELETE | 删除角色 | ✅       | ✅       | -    |
+
+##### 客户端管理
+
+| 端点                                 | 方法   | 描述       | 后端状态 | 前端集成 | 问题           |
+| ------------------------------------ | ------ | ---------- | -------- | -------- | -------------- |
+| `/api/v2/clients`                    | GET    | 客户端列表 | ✅       | ✅       | -              |
+| `/api/v2/clients`                    | POST   | 创建客户端 | ✅       | ✅       | -              |
+| `/api/v2/clients/{id}`               | GET    | 客户端详情 | ✅       | ✅       | -              |
+| `/api/v2/clients/{id}`               | PUT    | 更新客户端 | ✅       | ✅       | -              |
+| `/api/v2/clients/{id}`               | DELETE | 删除客户端 | ✅       | ✅       | -              |
+| `/api/v2/clients/{id}/secret`        | POST   | 轮换密钥   | ✅       | ❌       | **路径不匹配** |
+| `/api/v2/clients/{id}/rotate-secret` | POST   | 轮换密钥   | ❌       | ✅       | 前端调用此路径 |
+
+##### 认证管理
+
+| 端点                   | 方法 | 描述     | 后端状态 | 前端集成 | 问题             |
+| ---------------------- | ---- | -------- | -------- | -------- | ---------------- |
+| `/api/v2/auth/logout`  | POST | 会话注销 | ❌       | ✅       | **后端未实现**   |
+| `/api/v2/oauth/revoke` | POST | 令牌撤销 | ✅       | ❌       | 应统一使用此端点 |
+
+##### 审计日志
+
+| 端点                 | 方法 | 描述     | 后端状态 | 前端集成 | 问题           |
+| -------------------- | ---- | -------- | -------- | -------- | -------------- |
+| `/api/v2/audit/logs` | GET  | 审计日志 | ❌       | ❌       | **完全缺失**   |
+| `/api/v2/audit-logs` | GET  | 审计日志 | ❌       | ✅       | 前端调用此路径 |
 
 ## 3. 权限体系设计
 
@@ -272,6 +353,33 @@ sequenceDiagram
 - **策略**: 强制密码复杂度、定期更换、历史密码校验等。
 
 ## 5. 测试策略更新
+
+### 单元测试
+
+- **覆盖率目标**: 80%+
+- **测试框架**: Jest + @testing-library/react
+- **测试范围**: 核心业务逻辑、组件功能
+- **当前状态**: ⚠️ 基础测试已配置，需要扩展覆盖率
+
+### 集成测试
+
+- **API测试**: 使用 Postman/Newman
+- **E2E测试**: 使用 Playwright
+- **数据库测试**: 使用测试数据库
+- **当前状态**: ⚠️ 需要针对发现的集成问题编写测试用例
+
+### 安全测试
+
+- **OAuth2.1流程测试**: 授权码、PKCE验证 ✅
+- **JWT安全测试**: 签名验证、过期检查 ✅
+- **权限测试**: RBAC权限验证 ✅
+- **端点安全测试**: ⚠️ 需要测试路径不匹配问题
+
+### 集成问题测试
+
+- **路径一致性测试**: 验证前后端API路径匹配
+- **功能完整性测试**: 确保所有前端调用的API都有后端实现
+- **错误处理测试**: 统一错误响应格式验证
 
 基于新的详细设计，测试策略将进行如下调整：
 
