--- a/docs/系统架构设计.md
+++ b/docs/系统架构设计.md
@@ -1,109 +1,393 @@
 # 系统架构设计
 
-**版本**: 3.0
-**状态**: 设计中
+> **文档版本**: v3.1.0  
+> **最后更新**: 2025-01-26  
+> **维护团队**: 架构组  
+> **集成状态**: ⚠️ 75%完成，存在关键问题
 
-## 1. 概述
+## 概述
 
-本系统采用基于 `Turborepo` 的微服务架构（Monorepo），旨在构建一个可扩展、高内聚、低耦合的认证与业务服务平台。该架构整合了 `OAuth2.1` 认证授权服务、`RBAC` 权限管理、以及多个独立的业务微服务。
+本文档描述了基于 Turborepo 的 OAuth2.1 认证授权中心和微服务平台的系统架构设计。该架构采用 Next.js 15 + TypeScript 5 现代化技术栈，实现了 OAuth2.1 + OIDC 认证授权体系和企业级 RBAC 权限管理系统。
 
-### 1.1. 技术选型
+**⚠️ 当前状态**: 系统核心功能已实现，但存在关键集成问题需要解决，包括审计日志缺失、端点路径不匹配等问题。
 
-- **Monorepo**: Turborepo
-- **Web框架**: Next.js 15 (App Router)
-- **UI**: shadcn/ui + Tailwind CSS
-- **语言**: TypeScript
+## 技术选型
 
-## 2. 宏观架构
+### 核心技术栈
 
-系统分为两个核心部分：`Apps`（应用层）和 `Packages`（共享层）。
+- **框架**: Next.js 15.3.2 (App Router)
+- **语言**: TypeScript 5
+- **UI库**: shadcn/ui + Tailwind CSS 4.1.5
+- **数据库**: Prisma 6.10.1 + SQLite (开发) / PostgreSQL (生产)
+- **认证**: OAuth2.1 + JWT (jose 6.0.11)
+- **构建工具**: Turborepo 2.5.4
+- **包管理**: pnpm 10.6.2
+- **测试**: Jest 30 + @testing-library/react
+
+### 前端技术栈
+
+- **状态管理**: Zustand + Immer (flow-service)
+- **表格组件**: @tanstack/react-table (admin-portal)
+- **图表库**: @xyflow/react (flow-service)
+- **K线图**: lightweight-charts (kline-service)
+- **拖拽**: @dnd-kit/core (flow-service)
+- **WebAssembly**: flatbuffers (kline-service)
+
+### 后端技术栈
+
+- **运行时**: Node.js 22
+- **API**: Next.js API Routes
+- **认证**: OAuth2.1 + OIDC + PKCE
+- **权限**: RBAC (Role-Based Access Control)
+- **加密**: bcrypt + jose
+- **日志**: winston
+- **验证**: zod
+
+### 开发工具
+
+- **代码规范**: ESLint + Prettier
+- **类型检查**: TypeScript
+- **测试**: Jest 30
+- **Git Hooks**: husky + lint-staged
+
+## 宏观架构图
 
 ```mermaid
-graph TD
-    subgraph Apps (应用层)
-        A[oauth-service: 认证授权服务]
-        B[admin-portal: 后台管理门户]
-        C[kline-service: K线服务]
-        D[flow-service: 流程引擎服务]
-        E[test-service: 测试与示例服务]
+graph TB
+    subgraph "OAuth2.1 认证授权中心 & 微服务平台"
+        subgraph "Apps Layer - 微服务应用层"
+            A1["🔐 oauth-service<br/>OAuth2.1 认证授权服务<br/>Port: 3001"]
+            A2["🎛️ admin-portal<br/>系统管理后台<br/>Port: 3002"]
+            A3["📈 kline-service<br/>K线图表服务<br/>Port: 3003"]
+            A4["🔄 flow-service<br/>可视化流程引擎<br/>Port: 3004"]
+            A5["🧪 test-service<br/>测试与示例服务<br/>Port: 3005"]
+        end
+
+        subgraph "Packages Layer - 共享包层"
+            P1["@repo/ui<br/>UI组件库<br/>shadcn/ui + Tailwind"]
+            P2["@repo/lib<br/>工具函数库<br/>认证、验证、工具"]
+            P3["@repo/database<br/>数据库层<br/>Prisma + SQLite"]
+            P4["@repo/eslint-config<br/>代码规范配置"]
+            P5["@repo/typescript-config<br/>TypeScript配置"]
+        end
     end
 
-    subgraph Packages (共享层)
-        P1[@repo/ui: 共享UI组件库]
-        P2[@repo/lib: 共享工具库]
-        P3[@repo/database: 数据库ORM与模型]
-        P4[eslint-config-custom: ESLint配置]
-        P5[tsconfig: TypeScript配置]
+    subgraph "External Systems - 外部系统"
+        DB[("🗄️ SQLite Database<br/>用户、角色、权限<br/>OAuth客户端")]
+        CLIENT["📱 OAuth2.1 Clients<br/>第三方应用<br/>移动端/Web端"]
+        BROWSER["🌐 Web Browser<br/>管理员界面<br/>用户授权界面"]
     end
 
-    A --> P1 & P2 & P3
-    B --> P1 & P2 & P3
-    C --> P2 & P3
-    D --> P2 & P3
-    E --> P1 & P2
+    %% 依赖关系
+    A1 --> P2
+    A1 --> P3
+    A2 --> P1
+    A2 --> P2
+    A2 --> P3
+    A3 --> P1
+    A3 --> P2
+    A4 --> P1
+    A4 --> P2
+    A5 --> P1
+    A5 --> P2
+    A5 --> P3
+
+    %% 数据流
+    P3 --> DB
+    CLIENT -.->|"OAuth2.1 Flow"| A1
+    BROWSER -.->|"Admin UI"| A2
+    BROWSER -.->|"Authorization"| A1
+    A2 -.->|"API Calls"| A1
+
+    %% 样式
+    classDef appNode fill:#e1f5fe,stroke:#01579b,stroke-width:2px
+    classDef pkgNode fill:#f3e5f5,stroke:#4a148c,stroke-width:2px
+    classDef extNode fill:#e8f5e8,stroke:#1b5e20,stroke-width:2px
+
+    class A1,A2,A3,A4,A5 appNode
+    class P1,P2,P3,P4,P5 pkgNode
+    class DB,CLIENT,BROWSER extNode
 ```
 
-## 3. 分层详解
+## Apps 详细说明
 
-### 3.1. Apps（应用层）
+### 🔐 oauth-service (端口: 3001)
 
-`Apps` 目录包含所有独立部署的微服务应用。
+**职责**: OAuth2.1 认证授权服务 - 系统核心
 
-- **`oauth-service`**:
+**技术栈**:
 
-  - **职责**: 核心认证授权服务，实现 `OAuth2.1` 和 `OIDC` 标准。
-  - **功能**: 用户注册、登录、令牌发放、令牌验证、PKCE支持、RBAC权限管理。
-  - **技术**: Next.js, Prisma, Jose
+- Next.js 15.3.2 API Routes
+- Prisma 6.10.1 (数据库访问)
+- jose 6.0.11 (JWT处理)
+- bcrypt (密码加密)
+- winston (日志记录)
+- zod (数据验证)
 
-- **`admin-portal`**:
+**核心功能**:
 
-  - **职责**: 系统后台管理界面。
-  - **功能**: 用户管理、客户端管理、角色权限分配、系统监控。
-  - **技术**: Next.js, shadcn/ui, TanStack Query
+- ✅ OAuth2.1 授权码流程 + PKCE
+- ✅ OpenID Connect (OIDC) 支持
+- ✅ JWT Access Token 和 Refresh Token
+- ✅ 企业级 RBAC 权限管理
+- ✅ 客户端注册和管理
+- ✅ 用户认证和授权
+- ✅ Scope 权限控制
+- ⚠️ 审计日志API (后端实现缺失)
+- ⚠️ 用户资料更新端点 (缺失)
 
-- **`kline-service`**:
+**API端点**:
 
-  - **职责**: 提供金融图表（K线）数据和渲染服务。
-  - **功能**: K线数据聚合、WASM高性能计算、实时数据推送。
-  - **技术**: Next.js, Rust (WebAssembly), WebSockets
+- `/api/v2/oauth/authorize` - 授权端点
+- `/api/v2/oauth/token` - 令牌端点
+- `/api/v2/oauth/userinfo` - 用户信息端点
+- `/api/v2/oauth/revoke` - 令牌撤销
+- `/api/v2/users/*` - 用户管理API
+- `/api/v2/roles/*` - 角色管理API
+- `/api/v2/clients/*` - 客户端管理API
+- ❌ `/api/v2/audit-logs` - 审计日志 (待实现)
 
-- **`flow-service`**:
+### 🎛️ admin-portal (端口: 3002)
 
-  - **职责**: 可视化流程编排与执行引擎。
-  - **功能**: 拖拽式流程设计、节点任务执行、状态持久化。
-  - **技术**: Next.js, React Flow
+**职责**: 系统管理后台 - 运营管理
 
-- **`test-service`**:
-  - **职责**: 用于开发、测试和演示的客户端应用。
-  - **功能**: 模拟OAuth2.1授权流程、测试API接口、展示UI组件。
+**技术栈**:
 
-### 3.2. Packages（共享层）
+- Next.js 15.3.2 (App Router)
+- shadcn/ui + Tailwind CSS 4.1.5
+- @tanstack/react-table (数据表格)
+- zod (表单验证)
+- @repo/ui (共享组件)
 
-`Packages` 目录包含跨应用共享的代码库。
+**核心功能**:
 
-- **`@repo/ui`**:
+- ✅ 用户管理 (CRUD)
+- ✅ 角色权限管理
+- ✅ OAuth客户端管理 (路径不匹配问题)
+- ⚠️ 系统监控和统计 (基础功能)
+- ❌ 审计日志查看 (后端API缺失)
+- ❌ 系统配置管理 (未实现)
+- ⚠️ 令牌撤销 (logout未集成)
 
-  - **职责**: 共享的 `React` 组件库。
-  - **内容**: 基于 `shadcn/ui` 封装的通用业务组件，如布局、表单、数据展示等。
+**页面结构**:
 
-- **`@repo/lib`**:
+- `/admin/dashboard` - 仪表板
+- `/admin/users` - 用户管理 ✅
+- `/admin/roles` - 角色管理 ✅
+- `/admin/clients` - OAuth客户端 ⚠️
+- `/admin/audit` - 审计日志 ❌
 
-  - **职责**: 共享的工具函数和类型定义。
-  - **内容**: 日期格式化、数据验证(Zod)、常量、TypeScript类型定义等。
+**⚠️ 集成问题**:
 
-- **`@repo/database`**:
+- 客户端密钥轮换路径不匹配
+- 审计日志功能无法使用
+- 用户资料更新功能缺失
+- logout时未调用令牌撤销
 
-  - **职责**: 数据库访问和模型定义。
-  - **内容**: `Prisma` schema、数据库客户端实例、数据迁移脚本。
+### 📈 kline-service (端口: 3003)
 
-- **配置包**:
-  - `eslint-config-custom`: 统一的 ESLint 代码风格配置。
-  - `tsconfig`: 基础和共享的 TypeScript 配置文件。
+**职责**: K线图表服务 - 数据可视化
 
-## 4. 服务间通信
+**技术栈**:
 
-- **同步通信**: 微服务之间通过 `RESTful API` 或 `gRPC` 进行直接调用，并由 `oauth-service` 签发的 `JWT` 进行认证。
-- **异步通信**: 考虑使用消息队列（如 `RabbitMQ` 或 `Kafka`）处理事件驱动的异步任务。
+- Next.js 15.3.2
+- lightweight-charts (图表库)
+- flatbuffers (高性能数据序列化)
+- WebAssembly (性能优化)
+
+**核心功能**:
+
+- 📊 实时K线图表展示
+- ⚡ 高性能数据渲染
+- 🔄 WebSocket 实时数据
+- 🎨 自定义图表样式
+- 📱 响应式设计
+
+**技术特色**:
+
+- 使用 FlatBuffers 优化数据传输
+- WebAssembly 加速计算密集型操作
+- 支持百万级数据点渲染
+
+### 🔄 flow-service (端口: 3004)
+
+**职责**: 可视化流程引擎 - 业务流程
+
+**技术栈**:
+
+- Next.js 15.3.2
+- @xyflow/react (流程图)
+- Zustand + Immer (状态管理)
+- @dnd-kit/core (拖拽功能)
+
+**核心功能**:
+
+- 🎨 可视化流程设计器
+- 🖱️ 节点拖拽和连接
+- ⚙️ 流程执行引擎
+- 💾 流程模板管理
+- 📋 流程实例监控
+
+**节点类型**:
+
+- 开始/结束节点
+- 条件判断节点
+- 用户任务节点
+- 系统任务节点
+- 网关节点
+
+### 🧪 test-service (端口: 3005)
+
+**职责**: 测试与示例服务 - 开发支持
+
+**技术栈**:
+
+- Next.js 15.3.2
+- @repo/ui (共享组件)
+- @repo/database (数据库访问)
+- Prisma 6.10.1
+
+**核心功能**:
+
+- 🔗 OAuth2.1 客户端集成示例
+- 🛠️ API测试工具
+- 📚 开发文档和示例
+- 🐛 调试和诊断工具
+- 🧪 端到端测试用例
+
+**示例场景**:
+
+- 授权码流程演示
+- PKCE 流程演示
+- JWT 令牌解析
+- RBAC 权限测试
+
+## Packages 共享架构
+
+### 📦 @repo/ui
+
+**职责**: 统一UI组件库 - 界面标准化
+
+**技术栈**:
+
+- React 19.1.0 + TypeScript 5
+- shadcn/ui + Tailwind CSS 4.1.5
+- Radix UI (无障碍组件)
+- class-variance-authority (样式变体)
+- tailwind-merge (样式合并)
+
+**组件分类**:
+
+- 🎨 **基础组件**: Button, Input, Select, Dialog, Toast
+- 📋 **表单组件**: Form, FormField, Checkbox, RadioGroup
+- 📊 **数据展示**: Table, Card, Badge, Avatar, Progress
+- 🧭 **导航组件**: Breadcrumb, Tabs, Pagination
+- 📱 **布局组件**: Container, Grid, Flex, Separator
+- 🎯 **业务组件**: UserAvatar, RoleSelect, PermissionTree
+
+**设计系统**:
+
+- 统一的颜色主题 (Light/Dark)
+- 响应式断点系统
+- 无障碍访问支持 (WCAG 2.1)
+- 组件文档和 Storybook
+
+### 🛠️ @repo/lib
+
+**职责**: 共享工具库 - 业务逻辑复用
+
+**技术栈**:
+
+- TypeScript 5 (严格模式)
+- zod 3.24.1 (数据验证)
+- date-fns (日期处理)
+- crypto-js (加密工具)
+
+**功能模块**:
+
+- 🔧 **工具函数**: 格式化、验证、转换
+- 📅 **日期工具**: 时区处理、格式化、计算
+- 🔐 **加密工具**: 哈希、签名、随机数生成
+- 📝 **验证模式**: Zod schemas for API/Form
+- 🎯 **业务常量**: 错误码、状态码、配置
+- 🔄 **类型定义**: 共享 TypeScript 类型
+
+**核心模块**:
+
+```typescript
+// 验证模式
+export const UserSchema = z.object({
+  email: z.string().email(),
+  password: z.string().min(8)
+})
+
+// 工具函数
+export const formatCurrency = (amount: number) => ...
+export const generateSecureId = () => ...
+```
+
+### 🗄️ @repo/database
+
+**职责**: 数据库访问层 - 数据统一管理
+
+**技术栈**:
+
+- Prisma 6.10.1 (ORM)
+- SQLite (开发环境)
+- PostgreSQL (生产环境)
+- Prisma Migrate (数据库迁移)
+
+**核心模型**:
+
+- 👤 **用户体系**: User, Profile, UserSession
+- 🔐 **OAuth2.1**: OAuthClient, AuthorizationCode, AccessToken
+- 🎭 **RBAC**: Role, Permission, UserRole, RolePermission
+- 📊 **审计日志**: AuditLog, LoginLog, OperationLog
+- ⚙️ **系统配置**: SystemConfig, ClientConfig
+
+**数据库特性**:
+
+- 🔄 自动迁移和版本控制
+- 🔍 全文搜索支持
+- 📈 性能监控和查询优化
+- 🛡️ 行级安全策略
+- 💾 连接池和缓存优化
+
+### ⚙️ 配置包
+
+**eslint-config-custom**:
+
+- 统一的代码风格规范
+- TypeScript 严格模式
+- React Hooks 规则
+- 导入排序和格式化
+
+**tsconfig**:
+
+- 基础 TypeScript 配置
+- 路径映射 (@repo/\*)
+- 严格类型检查
+- 现代 ES 特性支持
+
+## 服务间通信
+
+### 当前实现
+
+- **同步通信**: 微服务之间通过 `RESTful API` 进行直接调用，使用 `oauth-service` 签发的 `JWT` 进行认证
+- **前后端通信**: admin-portal 通过 HTTP API 调用 oauth-service
+- **认证机制**: OAuth2.1 标准流程，强制使用 PKCE
+
+### ⚠️ 当前问题
+
+- **端点路径不一致**: 部分API路径前后端不匹配
+- **错误处理**: 需要统一错误响应格式
+- **令牌管理**: logout流程未正确调用令牌撤销
+
+### 规划中的改进
+
+- **异步通信**: 考虑使用消息队列（如 `RabbitMQ` 或 `Kafka`）处理事件驱动的异步任务
+- **服务发现**: 实现服务注册与发现机制
+- **API网关**: 统一API入口和路由管理
 
 ## 5. Turborepo 配置
 
