--- a/docs/design/权限设计.md
+++ b/docs/design/权限设计.md
@@ -10,6 +10,13 @@
 
 本文档详细描述了平台的权限体系结构。系统采用基于角色的访问控制（RBAC）模型，结合了菜单、API、操作和数据四个层级的细粒度权限控制，以确保系统的安全性和灵活性。
 
+### 1.1 OAuth2 认证流程补充
+在OAuth2授权码流程中，登录页面(`/auth/login`)是用户身份认证的关键环节：
+1. 当未认证用户访问受保护资源时，重定向到登录页面
+2. 用户输入用户名密码进行身份验证
+3. 验证成功后继续OAuth授权流程
+4. 验证失败则返回错误信息
+
 ## 2. 权限模型 (RBAC)
 
 系统权限模型的核心是 **用户 (User)**、**角色 (Role)** 和 **权限 (Permission)** 之间的关系：
