--- a/docs/design/管理页面设计.md
+++ b/docs/design/管理页面设计.md
@@ -143,6 +143,23 @@
 ### 3.4 审计日志 (`/admin/system/audits`)
 
 -   **功能概述**: 查看系统记录的所有关键操作日志，用于安全审计和问题排查。
+
+### 3.5 登录页面 (`/auth/login`)
+
+-   **功能概述**: 用户输入用户名密码进行身份认证
+-   **页面路径**: `/auth/login`
+-   **UI元素**:
+    - 用户名输入框
+    - 密码输入框
+    - 登录按钮
+    - 错误提示区域
+-   **交互流程**:
+    1. 用户输入用户名密码
+    2. 提交表单到oauth-service验证
+    3. 验证成功则重定向回原请求
+    4. 验证失败则显示错误信息
+-   **API端点**:
+    - `POST /api/v2/auth/login` (oauth-service)
 -   **数据实体与字段**:
     -   **主要实体**: `AuditLog`
     -   **表格展示字段**: `timestamp`, `userId`, `action`, `resourceType`, `status`, `ipAddress`。
