fix: update docs

--- a/docs/design/详细设计文档.md
+++ b/docs/design/详细设计文档.md
@@ -20,16 +20,35 @@
 | [管理页面设计](./管理页面设计.md)                            | 描述了 `admin-portal` 的前端架构和页面组件设计。     | ✅ 已更新 |
 | [JWT 认证授权使用说明](../guidelines/JWT认证授权使用说明.md) | 详细说明了JWT的获取、验证和使用流程。                | ✅ 已更新 |
 
-## 3. 系统架构核心
+## 3. 系统架构
 
-系统采用基于 **Turborepo** 的 **Monorepo** 微服务架构，其核心组件包括：
+### 3.1 架构总览
 
-- **`pingora-proxy`**: 基于 Rust 的高性能 API 网关，作为系统统一入口。
-- **`oauth-service`**: 认证授权核心，实现 OAuth 2.1, OIDC, 和 RBAC，仅提供API服务，不渲染任何页面。
-- **`admin-portal`**: 用于管理用户、角色、客户端等的系统后台，同时作为认证中心UI，负责所有认证相关页面（登录、同意、错误等）。
-- **共享包 (`packages/*`)**: 提供统一的数据库访问、UI组件和核心工具库。
+分层微服务架构包含：
 
-_详细信息请参阅 [系统架构设计](./系统架构设计.md)。_
+- **pingora-proxy**：API网关（端口 6180）
+- **oauth-service**：认证服务（端口 3001），仅提供API
+- **admin-portal**：管理后台+认证中心UI（端口 3002）
+- **packages/**：共享数据库/UI组件/工具库
+
+### 3.2 服务分工
+
+- **oauth-service**：
+  - 提供OAuth2.1/OIDC/RBAC的API接口
+  - 需用户交互时重定向到admin-portal对应页面
+
+- **admin-portal**：
+  - 负责所有认证页面（登录/授权/错误处理）
+  - 根据oauth-service参数渲染页面
+  - 收集用户输入后回调oauth-service API
+
+### 3.3 核心流程
+
+1. 未认证请求 → oauth-service/authorize 
+2. 重定向 → admin-portal/auth/login
+3. 登录成功 → oauth-service继续流程
+4. 需授权 → admin-portal/oauth/consent
+5. 用户决策 → oauth-service颁发令牌
 
 ## 4. 页面与API分工原则
 
