--- a/docs/guidelines/文档导航.md
+++ b/docs/guidelines/文档导航.md
@@ -1,9 +1,9 @@
 # 文档导航
 
-**文档版本**: v2.1.0  
-**创建日期**: 2025-01-28  
-**最后更新**: 2025-07-02  
-**作者**: 技术团队  
+**文档版本**: v1.0.0  
+**创建日期**: 2025-07-22
+**最后更新**: 2025-07-22  
+**作者**: OAuth2.1 认证授权中心项目组  
 **状态**: 正式版 - 目录已重组
 
 ---
@@ -14,10 +14,8 @@
 docs/
 ├─ requirements/           # 需求与 PRD
 ├─ design/                 # 架构与详细设计
-├─ implementation/         # 实施 / 计划 / 优化
 ├─ ops/                    # 运维 / 部署 / 故障
 ├─ tests/                  # 测试策略与架构
-├─ reports/                # 阶段 / 专项报告
 ├─ guidelines/             # 规范 / 导航（当前目录）
 └─ archive/                # 历史归档
 ```
@@ -42,12 +40,11 @@ docs/
 | ----------------------------------------------- | ------------------- |
 | [产品需求文档](../requirements/产品需求文档.md) | 整体需求 & 业务场景 |
 
-### 2. Design
+## 设计文档
 
 | 文档                                                    | 描述                 |
 | ------------------------------------------------------- | -------------------- |
-| [系统架构设计](../design/系统架构设计.md)               | 微服务整体架构       |
-| [详细设计文档](../design/详细设计文档.md)               | 模块级设计说明       |
+| [详细设计文档](../design/详细设计文档.md)               | 系统架构与核心设计   |
 | [管理页面设计](../design/管理页面设计.md)               | 前端管理 UI 设计     |
 | [Pingora Proxy 设计](../design/pingora-proxy-design.md) | 网关设计（最新版本） |
 
