--- a/docs/guidelines/文档规范指南.md
+++ b/docs/guidelines/文档规范指南.md
@@ -1,213 +1,77 @@
-# OAuth2.1认证授权中心文档规范指南
+# 文档规范指南
 
-> **文档版本**: v2.0.0  
-> **创建日期**: 2024-01-20  
-> **最后更新**: 2024-12-19  
-> **文档状态**: 正式版  
-> **维护团队**: 全体开发团队
+> **文档版本**: v3.0.0  
+> **最后更新**: 2025-07-22  
+> **维护团队**: 开发团队
 
-## 文档摘要
+## 核心原则
 
-本指南建立了OAuth2.1认证授权中心项目的全面文档标准，包括格式规范、内容组织、维护流程和最佳实践，确保所有项目文档的一致性、可读性和可维护性。
+- **简洁性**: 避免冗余，直接表达核心信息
+- **一致性**: 统一格式、命名和结构
+- **实用性**: 专注于实际开发需要的信息
+- **时效性**: 保持文档与代码同步更新
 
-## 目录
+## 1. 命名规范
 
-- [1. 文档概述](#1-文档概述)
-- [2. 命名规范](#2-命名规范)
-- [3. 文档结构模板](#3-文档结构模板)
-- [4. 内容标准](#4-内容标准)
-- [5. 维护流程](#5-维护流程)
-- [6. 质量控制](#6-质量控制)
-- [7. 团队协作](#7-团队协作)
-- [8. 工具和平台](#8-工具和平台)
-- [9. 最佳实践](#9-最佳实践)
+### 1.1 文件命名
 
-## 1. 文档概述
+- 使用中文名称，描述清晰
+- 文件名格式：`功能模块-文档类型.md`
+- 示例：`系统架构-设计文档.md`、`用户管理-API文档.md`
 
-### 1.1 适用范围
-
-本规范适用于OAuth2.1认证授权中心项目的所有文档类型：
-
-- **产品需求文档**
-- **技术设计文档**
-- **API文档**
-- **测试文档**
-- **部署运维文档**
-- **用户手册**
-- **开发指南**
-
-### 1.2 文档原则
-
-- **一致性**: 所有文档遵循统一的格式和结构
-- **完整性**: 文档内容完整，覆盖所有必要信息
-- **准确性**: 文档内容与实际实现保持同步
-- **可读性**: 文档结构清晰，语言简洁明了
-- **可维护性**: 文档易于更新和维护
-- **可访问性**: 所有相关团队成员都能访问
-
-### 1.3 质量目标
-
-| 指标           | 目标值   | 测量方式       |
-| -------------- | -------- | -------------- |
-| 内容准确率     | > 95%    | 定期审查和验证 |
-| 文档更新及时性 | < 48小时 | 变更跟踪       |
-| 格式规范遵循率 | = 100%   | 自动化检查     |
-| 用户满意度     | > 90%    | 定期调研       |
-
-## 2. 命名规范
-
-### 2.1 文件命名
-
-**中文文档命名格式**:
+### 1.2 目录结构
 
 ```
-[功能模块][文档类型].md
-
-示例:
-- 产品需求文档.md
-- 系统架构设计.md
-- API接口文档.md
-- 测试策略文档.md
-- 部署运维指南.md
+docs/
+├── requirements/     # 需求文档
+├── design/          # 设计文档
+├── guidelines/      # 规范文档
+├── ops/            # 运维文档
+├── tests/          # 测试文档
+└── generated/      # 自动生成文档
 ```
 
-**文件名要求**:
+## 2. 文档模板
 
-- 使用中文命名
-- 名称简洁明了，不超过20个字符
-- 避免使用特殊字符和空格
-- 使用.md扩展名
-
-### 2.2 文档标题层级
-
-```markdown
-# 一级标题 (文档标题)
-
-## 二级标题 (主要章节)
-
-### 三级标题 (子章节)
-
-#### 四级标题 (详细内容)
-
-##### 五级标题 (最小粒度)
-```
-
-**注意**: 不建议使用六级标题，保持文档结构的清晰性。
-
-### 2.3 章节编号规范
-
-```markdown
-## 1. 第一章
-
-### 1.1 第一节
-
-### 1.2 第二节
-
-#### 1.2.1 子节
-
-#### 1.2.2 子节
-
-## 2. 第二章
-```
-
-## 3. 文档结构模板
-
-### 3.1 通用文档模板
+### 2.1 通用模板
 
 ```markdown
 # [文档标题]
 
 > **文档版本**: v1.0.0  
-> **创建日期**: YYYY-MM-DD  
-> **最后更新**: YYYY-MM-DD  
-> **文档状态**: [草稿/审核中/正式版]  
+> **最后更新**: 2025-07-22  
 > **维护团队**: [团队名称]
 
-## 文档摘要
+## 概述
 
-[简要描述文档内容和目的]
+[文档目的和主要内容]
 
-## 目录
-
-[自动生成或手动维护的目录]
-
-## 1. 概述
-
-[文档主要内容]
-
-## 2. 详细内容
+## 详细内容
 
 [具体章节内容]
-
-## 附录
-
-[相关资料、参考文档等]
 ```
 
-### 3.2 技术设计文档模板
+### 2.2 设计文档模板
 
 ```markdown
 # [系统/模块]设计文档
 
-> 文档信息块
-
-## 文档摘要
-
-## 目录
+> **文档版本**: v1.0.0  
+> **最后更新**: 2025-07-22
 
 ## 1. 设计概述
-
-### 1.1 设计目标
-
-### 1.2 设计原则
-
-### 1.3 技术选型
-
 ## 2. 系统架构
-
-### 2.1 整体架构
-
-### 2.2 模块划分
-
-### 2.3 接口设计
-
 ## 3. 详细设计
-
-### 3.1 核心功能
-
-### 3.2 数据模型
-
-### 3.3 业务流程
-
 ## 4. 技术实现
-
-### 4.1 关键技术
-
-### 4.2 性能考虑
-
-### 4.3 安全设计
-
-## 5. 部署方案
-
-## 6. 测试策略
-
-## 7. 风险评估
 ```
 
-### 3.3 API文档模板
+### 2.3 API文档模板
 
-````markdown
+```markdown
 # [模块]API接口文档
 
-> 文档信息块
-
-## API概述
-
-## 认证方式
-
-## 通用响应格式
-
-## 错误码说明
+> **文档版本**: v1.0.0  
+> **最后更新**: 2025-07-22
 
 ## 接口列表
 
@@ -215,7 +79,6 @@
 
 **请求方式**: GET/POST/PUT/DELETE  
 **请求路径**: /api/v1/example  
-**接口描述**: [接口功能描述]
 
 #### 请求参数
 
@@ -232,350 +95,12 @@
   "data": {}
 }
 ```
-````
+```
 
-#### 错误码
+## 3. 基本规范
 
-| 错误码 | 描述         |
-| ------ | ------------ |
-| 400    | 请求参数错误 |
-
-````
-
-## 4. 内容标准
-
-### 4.1 语言规范
-
-- **主要语言**: 中文
-- **技术术语**: 优先使用中文，必要时可标注英文
-- **代码注释**: 使用中文注释
-- **变量命名**: 使用英文，遵循驼峰命名法
-
-### 4.2 格式规范
-
-#### 4.2.1 文本格式
-
+- 使用中文编写，技术术语可标注英文
 - 使用Markdown格式
 - 中英文之间添加空格
-- 数字与中文之间添加空格
-- 使用全角中文标点符号
 - 代码块使用三个反引号包围
-
-#### 4.2.2 表格格式
-
-```markdown
-| 列标题1 | 列标题2 | 列标题3 |
-|---------|---------|----------|
-| 内容1   | 内容2   | 内容3   |
-| 内容4   | 内容5   | 内容6   |
-````
-
-#### 4.2.3 代码格式
-
-````markdown
-行内代码使用 `code` 格式
-
-代码块格式:
-
-```javascript
-function example() {
-  return 'Hello World';
-}
-```
-````
-
-````
-
-### 4.3 图片和图表
-
-- 图片格式: PNG、JPG、SVG
-- 图片命名: 使用英文，描述性命名
-- 图表工具: 推荐使用Mermaid、PlantUML
-- 存储位置: `/docs/images/` 目录
-
-## 5. 维护流程
-
-### 5.1 维护目标
-
-**核心目标**:
-- 确保文档内容的准确性和时效性
-- 维护文档体系的完整性和一致性
-- 提升文档的可读性和实用性
-- 建立高效的文档协作机制
-
-### 5.2 维护原则
-
-1. **及时性原则**: 代码变更后48小时内更新相关文档
-2. **准确性原则**: 确保文档内容与实际实现保持一致
-3. **完整性原则**: 覆盖系统的所有重要方面
-4. **一致性原则**: 遵循统一的格式和风格规范
-5. **可维护性原则**: 文档结构清晰，易于更新和扩展
-
-### 5.3 更新流程
-
-```mermaid
-flowchart TD
-    A[代码变更] --> B[识别影响文档]
-    B --> C[更新文档内容]
-    C --> D[内部审查]
-    D --> E{审查通过?}
-    E -->|是| F[提交更新]
-    E -->|否| C
-    F --> G[版本标记]
-    G --> H[通知相关人员]
-````
-
-### 5.4 文档分类管理
-
-#### 5.4.1 核心文档 (每周审查)
-
-- 产品需求文档
-- 系统架构设计
-- API接口文档
-- 部署运维指南
-
-#### 5.4.2 开发文档 (每月审查)
-
-- 开发环境搭建
-- 代码规范指南
-- 测试策略文档
-
-#### 5.4.3 管理文档 (每季度审查)
-
-- 项目管理文档
-- 团队协作规范
-- 文档规范指南
-
-## 6. 质量控制
-
-### 6.1 审查机制
-
-#### 6.1.1 同行审查
-
-- 所有文档更新需要至少一人审查
-- 技术文档需要技术负责人审查
-- 产品文档需要产品负责人审查
-
-#### 6.1.2 定期审查
-
-- 每月进行文档质量审查
-- 每季度进行文档体系完整性审查
-- 每半年进行文档标准更新审查
-
-### 6.2 质量检查清单
-
-- [ ] 文档格式符合规范
-- [ ] 内容准确完整
-- [ ] 链接有效可访问
-- [ ] 代码示例可运行
-- [ ] 图片清晰可见
-- [ ] 版本信息正确
-- [ ] 目录结构清晰
-
-### 6.3 自动化检查
-
-#### 6.3.1 Markdown格式检查
-
-```yaml
-# 文档检查工具配置
-markdown_lint:
-  rules:
-    - MD001: heading-increment
-    - MD003: heading-style
-    - MD004: ul-style
-    - MD007: ul-indent
-    - MD009: no-trailing-spaces
-    - MD010: no-hard-tabs
-    - MD011: no-reversed-links
-    - MD012: no-multiple-blanks
-```
-
-#### 6.3.2 文档与代码一致性检查
-
-基于[文档与代码一致性检查机制设计](./文档与代码一致性检查机制设计.md)，建立了完整的自动化检查体系：
-
-**核心检查类型**：
-
-1. **API端点状态检查**
-   - 自动扫描源代码中的API端点定义
-   - 对比文档中描述的API状态和完成度
-   - 检查端点实现状态的准确性
-
-2. **技术栈版本检查**
-   - 验证package.json与文档中版本信息一致性
-   - 检查各文档间版本描述的统一性
-   - 确保版本格式符合语义化版本规范
-
-3. **架构决策检查**
-   - 对比设计文档与实际代码架构
-   - 验证技术选择决策的文档记录
-   - 检查配置文件与文档说明的一致性
-
-**检查触发机制**：
-
-- ✅ **代码提交时**：自动触发基础一致性检查
-- ✅ **每日定时**：运行完整的一致性检查
-- ✅ **Pull Request**：阻止不一致的代码合并
-- ✅ **定期审查**：人工审查和质量评估
-
-**检查脚本配置**：
-
-```bash
-# 运行所有一致性检查
-npm run doc:check
-
-# 单独检查API端点一致性
-npm run doc:check:api
-
-# 单独检查版本信息一致性
-npm run doc:check:versions
-
-# 单独检查架构一致性
-npm run doc:check:architecture
-```
-
-**检查结果处理**：
-
-- 🟢 **通过**：允许合并，无需通知
-- 🟡 **警告**：允许合并，通知文档维护员
-- 🔴 **失败**：阻止合并，要求立即修复
-- ⚪ **跳过**：记录日志，允许合并
-
-#### 6.3.3 检查报告生成
-
-自动生成多种格式的检查报告：
-
-- **HTML报告**：包含详细的检查结果和可视化图表
-- **JSON报告**：供CI/CD系统和自动化工具使用
-- **Markdown报告**：供人工审查和存档
-
-## 7. 团队协作
-
-### 7.1 角色分工
-
-| 角色       | 职责                         |
-| ---------- | ---------------------------- |
-| 文档管理员 | 制定标准、监督执行、质量控制 |
-| 技术负责人 | 技术文档审查、架构文档维护   |
-| 产品负责人 | 需求文档审查、产品文档维护   |
-| 开发人员   | 开发文档编写、技术文档更新   |
-| 测试人员   | 测试文档编写、质量验证       |
-
-### 7.2 协作流程
-
-1. **文档创建**: 按照模板创建新文档
-2. **内容编写**: 遵循内容标准编写
-3. **内部审查**: 团队内部审查
-4. **正式审查**: 指定审查人审查
-5. **发布更新**: 正式发布并通知
-6. **持续维护**: 定期更新和维护
-
-### 7.3 沟通机制
-
-- **文档更新通知**: 通过项目群通知
-- **问题反馈**: 通过Issue跟踪
-- **改进建议**: 通过定期会议讨论
-- **培训交流**: 定期组织文档规范培训
-
-## 8. 工具和平台
-
-### 8.1 编写工具
-
-- **推荐编辑器**: VS Code、Typora
-- **Markdown插件**: Markdown All in One
-- **图表工具**: Mermaid、PlantUML
-- **截图工具**: Snipaste、LightShot
-
-### 8.2 存储平台
-
-- **版本控制**: Git
-- **文档仓库**: 项目代码仓库的 `/docs` 目录
-- **在线预览**: GitHub Pages、GitLab Pages
-- **协作平台**: 项目管理工具集成
-
-### 8.3 自动化工具
-
-```yaml
-# GitHub Actions 文档检查
-name: Documentation Check
-on: [push, pull_request]
-jobs:
-  docs-check:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Lint Markdown
-        uses: articulate/actions-markdownlint@v1
-        with:
-          config: .markdownlint.json
-          files: 'docs/**/*.md'
-```
-
-## 9. 最佳实践
-
-### 9.1 编写技巧
-
-1. **开门见山**: 在文档开头明确说明目的和范围
-2. **结构清晰**: 使用合理的标题层级和编号
-3. **内容完整**: 包含所有必要的信息和上下文
-4. **示例丰富**: 提供具体的代码示例和使用场景
-5. **定期更新**: 保持文档与实际实现同步
-
-### 9.2 常见问题
-
-#### 9.2.1 格式问题
-
-- 标题层级跳跃
-- 表格格式不规范
-- 代码块语言标识缺失
-- 链接失效
-
-#### 9.2.2 内容问题
-
-- 信息过时
-- 描述不准确
-- 缺少关键信息
-- 逻辑不清晰
-
-### 9.3 改进建议
-
-1. **建立文档模板库**: 为不同类型文档提供标准模板
-2. **实施自动化检查**: 使用工具自动检查格式和链接
-3. **定期培训**: 组织团队文档规范培训
-4. **收集反馈**: 定期收集用户反馈，持续改进
-5. **建立激励机制**: 鼓励团队成员积极参与文档维护
-
-### 9.4 成功指标
-
-| 指标类别 | 具体指标   | 目标值   |
-| -------- | ---------- | -------- |
-| 质量指标 | 文档准确率 | > 95%    |
-| 时效指标 | 更新及时性 | < 48小时 |
-| 使用指标 | 文档访问量 | 持续增长 |
-| 满意指标 | 用户满意度 | > 90%    |
-
-## 附录
-
-### A. 文档模板下载
-
-- [通用文档模板](./templates/general-template.md)
-- [技术设计文档模板](./templates/design-template.md)
-- [API文档模板](./templates/api-template.md)
-- [测试文档模板](./templates/test-template.md)
-
-### B. 工具配置文件
-
-- [Markdown Lint配置](./.markdownlint.json)
-- [VS Code设置](./vscode-settings.json)
-- [GitHub Actions配置](./.github/workflows/docs-check.yml)
-
-### C. 参考资料
-
-- [Markdown语法指南](https://markdown.com.cn/)
-- [Mermaid图表语法](https://mermaid-js.github.io/mermaid/)
-- [PlantUML用户指南](https://plantuml.com/zh/)
-- [技术写作最佳实践](https://developers.google.com/tech-writing)
-
----
-
-**文档维护**: 如有问题或建议，请联系文档管理员或在项目Issue中反馈。
+- 图片存储在 `/docs/images/` 目录
