--- a/docs/requirements/产品需求文档.md
+++ b/docs/requirements/产品需求文档.md
@@ -1,33 +1,27 @@
 # 产品需求文档 (PRD)
 
-> **文档版本**: v6.0.0  
-> **创建日期**: 2025-01-28
-> **最后更新**: 2025-07-17  
-> **文档状态**: 正式版  
+> **文档版本**: v6.1.0  
+> **最后更新**: 2025-07-22  
 > **维护团队**: 产品团队
 
 ## 1. 产品概述
 
-### 1.1 产品愿景与目标
+### 1.1 产品目标
 
-**愿景**: 打造一个专为企业内网环境设计，安全、标准、易于集成的认证授权基础设施，采用完整的OAuth 2.1 + OpenID Connect无状态架构。
-
-**核心目标**:
-
-- **标准化**: 提供完全遵循 OAuth 2.1 和 OpenID Connect (OIDC) 规范的认证服务，强制PKCE增强安全。
-- **无状态**: 采用无状态JWT令牌机制，不依赖服务器端session，支持水平扩展。
-- **双角色架构**: admin-portal同时作为OAuth客户端和认证中心UI，实现自包含的认证生态。
-- **企业级RBAC**: 通过JWT内嵌权限信息，实现细粒度的基于角色访问控制。
-- **生产可用**: 支持refresh token、JWKS动态密钥轮换、完整的审计日志。
+- **标准化**: OAuth 2.1 + OIDC认证服务，强制PKCE
+- **无状态**: JWT令牌机制，支持水平扩展
+- **双角色架构**: admin-portal同时作为OAuth客户端和认证服务UI
+- **企业级RBAC**: JWT内嵌细粒度权限控制
+- **生产可用**: refresh token/JWKS轮换/审计日志
 
 ### 1.2 目标用户
 
-| 用户角色           | 核心诉求                                                              |
-| :----------------- | :-------------------------------------------------------------------- |
-| **企业IT管理员**   | 统一管理内部应用和用户权限；确保系统安全合规；支持admin-portal作为OAuth客户端的自认证流程。 |
-| **内网应用开发者** | 通过标准OAuth 2.1流程集成认证功能；admin-portal本身即为第一个接入的OAuth客户端示例。 |
-| **安全审计员**     | 监控和审计所有关键操作和访问行为；确保系统符合企业安全策略。          |
-| **企业员工**       | 通过admin-portal作为OAuth客户端，实现单点登录(SSO)访问所有内部应用。 |
+| 用户角色           | 核心诉求                                      |
+| :----------------- | :-------------------------------------------- |
+| **IT管理员**       | 统一管理应用权限，确保安全合规                |
+| **应用开发者**     | 标准OAuth集成，管理后台客户端作为示例         |
+| **安全审计员**     | 监控关键操作，确保符合安全策略                |
+| **企业员工**       | 通过管理后台客户端实现SSO访问                 |
 
 ### 1.3 核心价值主张
 
@@ -60,41 +54,38 @@
 
 ## 3. 功能需求详述
 
-### 3.1 `oauth-service`: 认证授权核心服务
+### 3.1 认证服务 (oauth-service)
 
-#### 核心功能模块
+#### 核心功能
 
-| 功能模块               | 需求描述                                                                                            | 优先级 |
-| :--------------------- | :-------------------------------------------------------------------------------------------------- | :----- |
-| **OAuth 2.1 完整实现** | 提供完整的授权码流程，**强制PKCE (S256)**，支持refresh token，符合OAuth 2.1规范。                    | **P0** |
-| **OIDC 1.0 支持**      | 完整实现OpenID Connect协议，包括UserInfo端点、ID Token、标准claims。                               | **P0** |
-| **JWKS 动态管理**      | 支持RSA密钥对的动态轮换，通过`/.well-known/jwks.json`提供公钥，支持密钥版本控制。                   | **P0** |
-| **admin-portal客户端** | 系统初始化时自动为admin-portal创建OAuth客户端，配置标准权限scope和重定向URI。                       | **P0** |
-| **令牌生命周期管理**   | Access Token: 15分钟，Refresh Token: 30天，支持令牌撤销和黑名单机制。                               | **P0** |
-| **客户端管理API**      | 提供完整的OAuth客户端CRUD API，支持客户端密钥轮换、权限范围配置、重定向URI验证。                    | **P0** |
-| **用户管理API**        | 提供用户账户管理API，支持用户状态管理、密码策略、角色分配。                                         | **P0** |
-| **无状态架构**         | 完全无状态设计，不依赖服务器端session，支持水平扩展和云原生部署。                                   | **P0** |
+| 功能模块          | 需求描述                                      | 优先级 |
+| :---------------- | :-------------------------------------------- | :----- |
+| **OAuth 2.1**     | 授权码流程，支持refresh token                 | **P0** |
+| **OIDC 1.0**      | UserInfo端点/ID Token/标准claims             | **P0** |
+| **JWKS 管理**     | RSA密钥动态轮换，`/.well-known/jwks.json`     | **P0** |
+| **管理后台客户端**| 初始化时自动创建客户端配置                    | **P0** |
+| **令牌管理**      | Access Token(15分)/Refresh Token(30天)        | **P0** |
+| **客户端API**     | OAuth客户端CRUD管理                           | **P0** |
+| **用户API**       | 用户账户管理/密码策略/角色分配                | **P0** |
 
-### 3.2 `admin-portal`: 系统管理后台 + OAuth客户端
+### 3.2 管理后台 (admin-portal)
 
-#### 3.2.1 作为OAuth客户端的功能
+#### 3.2.1 OAuth客户端功能
 
-| 功能模块               | 需求描述                                                                                  | 优先级 |
-| :--------------------- | :---------------------------------------------------------------------------------------- | :----- |
-| **客户端注册**         | 系统初始化时自动向oauth-service注册为OAuth客户端，获取client_id和client_secret。          | **P0** |
-| **PKCE实现**           | 完整实现PKCE流程，包括code_verifier和code_challenge的生成与验证。                         | **P0** |
-| **令牌存储**           | 安全存储access token和refresh token（浏览器localStorage），支持自动刷新。                 | **P0** |
-| **权限范围申请**       | 申请标准scope: `openid profile admin:read admin:write`，根据用户权限动态调整。             | **P0** |
-| **重定向URI配置**      | 配置标准重定向URI: `https://admin-portal.example.com/auth/callback`。                    | **P0** |
+| 功能模块          | 需求描述                                      | 优先级 |
+| :---------------- | :-------------------------------------------- | :----- |
+| **客户端注册**    | 自动获取client_id/client_secret               | **P0** |
+| **令牌存储**      | localStorage存储token，支持自动刷新           | **P0** |
+| **权限范围**      | `openid profile admin:read admin:write`       | **P0** |
+| **重定向URI**     | `https://admin-portal.example.com/auth/callback` | **P0** |
 
-#### 3.2.2 作为认证中心UI的功能
+#### 3.2.2 认证服务UI功能
 
-| 功能模块               | 需求描述                                                                                  | 优先级 |
-| :--------------------- | :---------------------------------------------------------------------------------------- | :----- |
-| **统一登录页**         | 提供标准登录界面，支持用户名密码登录，作为OAuth授权流程的起点。                           | **P0** |
-| **授权同意页面**       | 显示admin-portal作为客户端请求的权限详情，提供同意/拒绝选项。                             | **P0** |
-| **错误处理页面**       | 处理各种OAuth错误情况（无效客户端、scope冲突、用户拒绝等）。                              | **P0** |
-| **令牌刷新机制**       | 在access token过期前自动使用refresh token获取新令牌，保持用户登录状态。                   | **P0** |
+| 功能模块          | 需求描述                                      | 优先级 |
+| :---------------- | :-------------------------------------------- | :----- |
+| **登录页**        | 标准登录界面                                  | **P0** |
+| **授权页面**      | 显示权限详情，提供同意/拒绝选项               | **P0** |
+| **错误处理**      | 处理OAuth错误情况                             | **P0** |
 
 #### 3.2.3 管理后台功能
 
@@ -108,17 +99,15 @@
 
 ### 3.3 完整的OAuth 2.1认证流程
 
-#### 3.3.1 首次访问场景
+#### 3.3.1 首次访问流程
 
-1. **用户访问dashboard**: `https://admin-portal.example.com/admin`
-2. **检查认证状态**: admin-portal检查localStorage中的access token
-3. **重定向到授权**: 无有效token，重定向到 `https://oauth-service.example.com/api/v2/oauth/authorize?client_id=admin-portal&response_type=code&scope=openid profile admin:read&redirect_uri=https://admin-portal.example.com/auth/callback&state=xyz&code_challenge=abc&code_challenge_method=S256`
-4. **登录页面**: oauth-service检测未认证，重定向到 `https://admin-portal.example.com/auth/login`
-5. **用户登录**: 用户输入用户名密码
-6. **授权同意**: 登录成功后跳转到授权同意页面 `https://admin-portal.example.com/oauth/consent`
-7. **用户授权**: 用户确认授权范围
-8. **令牌交换**: admin-portal收到授权码，调用 `POST /oauth/token` 交换access token和refresh token
-9. **重定向到目标**: 携带token重定向回原始dashboard页面
+1. 访问dashboard → 检查token
+2. 无token → 重定向到oauth-service/authorize
+3. 未认证 → 重定向到auth/login
+4. 用户登录
+5. 需要授权 → 跳转oauth/consent
+6. 用户授权 → 调用/oauth/token交换令牌
+7. 重定向回dashboard
 
 #### 3.3.2 令牌刷新场景
 
@@ -203,24 +192,14 @@
 
 ## 5. 非功能性需求
 
-### 5.1 性能要求
+### 5.1 性能与安全
 
-| 场景                 | 性能指标                 |
-| :------------------- | :----------------------- |
-| **授权码流程**       | P99响应时间 < 500ms      |
-| **令牌刷新**         | P99响应时间 < 200ms      |
-| **JWT验证**          | P99响应时间 < 50ms       |
-| **页面加载**         | 首次加载 < 2秒           |
-| **权限检查**         | 客户端验证 < 10ms        |
-
-### 5.2 安全要求
-
-- **强制PKCE**: 所有授权码流程必须使用PKCE
-- **令牌加密**: JWT必须使用RS256非对称签名
-- **密钥管理**: 支持JWKS动态密钥轮换
-- **权限最小化**: admin-portal客户端仅申请必要权限
-- **审计日志**: 记录所有认证和授权操作
-- **CSRF防护**: 使用state参数防止CSRF攻击
+| 指标类型       | 要求                                  |
+| :------------- | :------------------------------------ |
+| **响应时间**   | 授权流程<500ms, 令牌刷新<200ms        |
+| **页面加载**   | 首次加载<2秒                          |
+| **安全机制**   | 强制PKCE/RS256签名/JWKS轮换/CSRF防护  |
+| **权限控制**   | 最小权限原则+完整审计日志             |
 
 ### 5.3 可用性要求
 
