Based on the git diff analysis, here's a concise commit message:
**Add WASM renderer design docs and implement fallback rendering strategy**

- Add detailed WASM financial chart design documentation
- Implement error-handling renderer with fallback mechanism
- Create renderer factory pattern and trait definitions
- Add TDD guidelines to project documentation
- Introduce e2e tests for user management
- Standardize project docs with CLAUDE.md in all modules
- Update admin portal UI components and config page

The changes focus on:
1. Adding comprehensive design documentation for WASM financial chart rendering
2. Implementing a robust rendering system with error fallback capabilities
3. Introducing testing strategies (TDD guidelines and e2e tests)
4. Standardizing project documentation across all modules
5. Making minor UI improvements to admin components

--- a/docs/design/权限设计.md
+++ b/docs/design/权限设计.md
@@ -2,9 +2,16 @@
 
 > **文档版本**: v1.0.0  
 > **创建日期**: 2025-07-08
-> **最后更新**: 2025-07-08  
+> **最后更新**: 2025-07-18  
 > **文档状态**: 正式版  
 > **维护团队**: 架构团队
+
+## 1.1 OAuth2 和 RBAC 集成最佳实践
+
+基于最新最佳实践，OAuth2 可用于令牌认证，而 RBAC 通过角色控制访问。推荐使用 Quarkus 或 WSO2 Identity Server 实现 scope-based 访问控制，将角色映射到 OAuth2 scopes 以实现细粒度授权。<mcreference link="https://quarkus.io/guides/security-oauth2" index="1">1</mcreference> <mcreference link="https://gdrdabarera.medium.com/rbac-role-based-access-control-via-oauth2-0-scopes-with-wso2-identity-server-dd6dcb0b737b" index="2">2</mcreference> <mcreference link="https://auth0.com/docs/manage-users/access-control/rbac" index="5">5</mcreference>
+
+- 使用 JWT 令牌携带角色声明。
+- 在微服务中，通过 OIDC 验证令牌并应用 RBAC。<mcreference link="https://stackoverflow.com/questions/9604191/oauth2-and-role-based-access-control" index="3">3</mcreference> <mcreference link="https://security.stackexchange.com/questions/206491/microservices-and-rbac-using-oidc" index="4">4</mcreference>
 
 ## 1. 概述
 
